@@ -460,7 +460,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
-            <version>2.16</version>
+            <version>2.19</version>
             <configuration>
               <includes>
                 <include>fi/pyramus/rest/**/*IT.java</include>
@@ -479,6 +479,7 @@
                 <it.keystore.alias>${it.keystore.alias}</it.keystore.alias>
                 <it.keystore.storepass>${it.keystore.pass}</it.keystore.storepass>
               </systemPropertyVariables>
+              <argLine>-Xmx2G -XX:MaxPermSize=1G</argLine>
             </configuration>
             <executions>
               <execution>
@@ -638,7 +639,7 @@
           <plugin>
             <groupId>org.codehaus.cargo</groupId>
             <artifactId>cargo-maven2-plugin</artifactId>
-            <version>1.4.9</version>
+            <version>1.4.16</version>
             <configuration>
               <container>
                 <containerId>wildfly8x</containerId>
@@ -721,6 +722,7 @@
                       <command>/subsystem=undertow/server=default-server/host=pyramus:write-attribute(name=default-web-module,value=ROOT.war)</command>
                       <command>/subsystem=security/security-domain=WebServices:add(cache-type=default)</command>
                       <command>/subsystem=security/security-domain=WebServices/authentication=classic:add(login-modules=[{"code"=&gt;"RealmUsersRoles","flag"=&gt;"required","module-options"=&gt;[("realm"=&gt;"WebServices"),("password-stacking"=&gt;"useFirstPass"),("rolesProperties"=&gt;"\${jboss.server.config.dir}/application-roles.properties"),("usersProperties"=&gt;"\${jboss.server.config.dir}/application-users.properties")]}])</command>
+                      <command>/subsystem=logging/logger=javax.ws.rs.NotFoundException:add(level=SEVERE)</command>
                     </commands>
                   </execute-commands>
                 </configuration>
@@ -812,7 +814,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
-            <version>2.16</version>
+            <version>2.19</version>
             <configuration>
               <includes>
                 <include>fi/pyramus/ui/**/*IT.java</include>
